Adding the new ejb based genspace (note - has some severe classpath issues with the ant build file, so don't expect the component to work immediately)
git-svn-id: https://ncisvn.nci.nih.gov/svn/geworkbench/trunk/geworkbench@7730 8b29bb6e-589a-435a-9a12-3ab907be3462